--- a/code/css/style.css
+++ b/code/css/style.css
@@ -121,7 +121,7 @@ header {
     align-items: center;
     justify-content: space-between;
     background-color: white;
-    background-image: url(img/Voyagez.jpg);
+    background-image: url(../img/Voyagez.jpg);
     background-repeat: no-repeat;
     background-position-x: 50%;
     margin: 0;
